Stop server titles from overflowing

--- a/src/App.scss
+++ b/src/App.scss
@@ -116,7 +116,6 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  overflow: auto;
 
   @include mobile{
     padding-top: 48px;
