--- a/src/components/ServerDetailsPage.scss
+++ b/src/components/ServerDetailsPage.scss
@@ -16,7 +16,7 @@
     font-size: 38px;
     font-weight: normal;
     text-shadow: 0 1px 8px #000;
-    word-break: keep-all;
+    word-break: break-word;
     align-self: flex-end;
 
     @include mobile{
