--- a/src/index.scss
+++ b/src/index.scss
@@ -200,8 +200,8 @@ a:hover, .link:hover{
       flex-basis: 250px;
     }
 
-    & > h2{
-      word-break: keep-all;
+    h2, td{
+      word-break: break-word;
     }
 
     img{
